fix: add overflow-x hidden to navbar for improved mobile layout

--- a/src/Shared/style/navbar.css
+++ b/src/Shared/style/navbar.css
@@ -148,9 +148,14 @@ nav .container ul .close-btn:hover {
 }
 
 @media screen and (max-width: 768px) {
+    nav {
+        overflow-x: hidden;
+    }
+
     nav .container {
         padding: 1.5rem 0;
     }
+
     nav .container .menu-btn {
         display: block;
     }
